--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,19 +4,24 @@ FROM python:3.9-slim
 # Set the working directory in the container
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y \
+    gcc \
+    python3-dev \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
 # Copy the application code into the container
 COPY . .
 
-# Install Flask and other necessary packages
-RUN pip install Flask Flask-CORS
+# Set environment variables
+ENV FLASK_APP=app.py
+ENV FLASK_ENV=development
 
 # Expose port 5000 for the Flask app
 EXPOSE 5000
 
-# Set the environment variable for Flask
-ENV FLASK_APP=app.py
-ENV FLASK_ENV=development
-
 # Use entrypoint to run Flask
-ENTRYPOINT ["flask", "run", "--host=0.0.0.0", "--port=5000"]
-
+CMD ["flask", "run", "--host=0.0.0.0", "--port=5000", "--debug"]
