--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,12 +8,15 @@ RUN apt-get update && apt-get install -y \
     gcc \
     python3-dev \
     libpq-dev \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
 COPY requirements.txt .
+RUN pip install --no-cache-dir --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the application code into the container
+#COPY ./backend /app
 COPY . .
 
 # Set environment variables
